# HEC

./: .gitignore  HEC.cabal  LICENSE  README.md
Docs/: Helps.txt  Links.txt
src/LangInt/: Eval.hs  Parser.hs  PartialEval.hs  Print.hs  Syntax.hs
src/LangSrc/: Eval.hs  PartialEval.hs  Print.hs  Syntax.hs
test/: LangIntSpec.hs  SpecEval.hs  SpecLexer.hs  SpecPartialEval.hs  SpecPrint.hs
test/LangSrc/: LangSrcSpec.hs  SpecEval.hs  SpecPartialEval.hs  SpecPrint.hs
